<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search_bar"
        android:icon="@drawable/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/aboutUs"
        android:title="@string/rolunk"
        android:icon="@drawable/about_us"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/jegyeim"
        android:title="@string/jegyeim"
        android:icon="@drawable/jegyeim"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />



</menu>